sort.basic.cocktail.AlgCocktailSort1.scala.error
Erreur de compilation :
AlgCocktailSort1:18: error: type mismatch;
 found   : Unit
 required: Boolean
  } while (lastEchange = true)
                       ^